--- a/saac/www/templates/tabs.html
+++ b/saac/www/templates/tabs.html
@@ -5,14 +5,24 @@ navigation history that also transitions its views in and out.
 -->
 <ion-tabs class="tabs-icon-top tabs-color-active-positive">
 
-  <!-- Dashboard Tab -->
-  <ion-tab title="Status" icon-off="ion-ios-pulse" icon-on="ion-ios-pulse-strong" href="#/tab/dash">
-    <ion-nav-view name="tab-dash"></ion-nav-view>
+  <!-- Stream Tab -->
+  <ion-tab title="Stream" icon-off="ion-ios-home-outline" icon-on="ion-ios-home" href="#/tab/stream">
+    <ion-nav-view name="tab-stream"></ion-nav-view>
   </ion-tab>
 
-  <!-- Chats Tab -->
-  <ion-tab title="Chats" icon-off="ion-ios-chatboxes-outline" icon-on="ion-ios-chatboxes" href="#/tab/chats">
-    <ion-nav-view name="tab-chats"></ion-nav-view>
+  <!-- Events Tab -->
+  <ion-tab title="Events" icon-off="ion-ios-calendar-outline" icon-on="ion-ios-calendar" href="#/tab/events">
+    <ion-nav-view name="tab-events"></ion-nav-view>
+  </ion-tab>
+
+  <!-- Photo Tab -->
+  <ion-tab title="Photo" icon-off="ion-ios-camera-outline" icon-on="ion-ios-camera">
+    <!-- <ion-nav-view name="tab-photo"></ion-nav-view> href="#/tab/photo" -->
+  </ion-tab>
+
+  <!-- Leaderboard Tab -->
+  <ion-tab title="Leaderboard" icon-off="ion-ios-people-outline" icon-on="ion-ios-people" href="#/tab/leader">
+    <ion-nav-view name="tab-leader"></ion-nav-view>
   </ion-tab>
 
   <!-- Account Tab -->
