--- a/saac/www/templates/tabs.html
+++ b/saac/www/templates/tabs.html
@@ -16,8 +16,8 @@ navigation history that also transitions its views in and out.
   </ion-tab>
 
   <!-- Photo Tab -->
-  <ion-tab title="Photo" icon-off="ion-ios-camera-outline" icon-on="ion-ios-camera">
-    <!-- <ion-nav-view name="tab-photo"></ion-nav-view> href="#/tab/photo" -->
+  <ion-tab title="Photo" icon-off="ion-ios-camera-outline" icon-on="ion-ios-camera" href="#/tab/photo">
+    <ion-nav-view name="tab-photo"></ion-nav-view>
   </ion-tab>
 
   <!-- Leaderboard Tab -->
