adds fblogin button

--- a/saac/www/templates/start.html
+++ b/saac/www/templates/start.html
@@ -8,14 +8,11 @@
             <h2>jelly</h2>
             <h2>time</h2>
 
-            <div class="bottom">
-                <a class="button button-stable" ui-sref="app.signup" style="max-width:84%;color:#73404C;padding-left:28px;padding-right:28px;">
-                    swag
-                </a>
-                <a class="button button-block button-clear" ui-sref="app.login">
-                    Already a Nibbler?&nbsp;&nbsp;Log In&nbsp;<i class="icon-arrow-right"></i>
-                </a>
-            </div>
+            <label class="item">
+                <button class="button button-block button-positive" ng-click="fbLogin()">
+                    Login with Facebook
+                </button>
+            </label>
 
         </div>
 
