adds native facebook login for ios

--- a/saac/www/templates/start.html
+++ b/saac/www/templates/start.html
@@ -9,7 +9,7 @@
             <h2>time</h2>
 
             <label class="item">
-                <button class="button button-block button-positive" ng-click="fbLogin()">
+                <button class="button button-block button-positive" ng-click="facebookSignIn()">
                     Login with Facebook
                 </button>
             </label>
