--- a/saac/www/templates/tab-photo.html
+++ b/saac/www/templates/tab-photo.html
@@ -1,7 +1,6 @@
 <ion-view view-title="Photo">
-  <ion-content class="padding">
-    <button class="button button-full button-energized">
-      Add image
-    </button>
-  </ion-content>
+	<ion-content class="padding">
+		<button class="button icon ion-ios7-camera button-light" ng-click="addPicture()" style="width: 68px;"></button><br/>
+		<button class="button icon ion-ios7-photos button-light" ng-click="addPicture('LIBRARY')" style="width: 68px;margin-top: 4px;"></button>
+	</ion-content>
 </ion-view>
