--- a/saac/www/templates/tab-stream.html
+++ b/saac/www/templates/tab-stream.html
@@ -1,4 +1,5 @@
 <ion-view view-title="Stream">
 	<ion-content>
+		<!--<a class="button button-assertive button-block button-outline" ng-click="showLogOutMenu()">Log Out</a>-->
 	</ion-content>
 </ion-view>
