--- a/saac/www/templates/tab-photo.html
+++ b/saac/www/templates/tab-photo.html
@@ -2,5 +2,6 @@
 	<ion-content class="padding">
 		<button class="button icon ion-ios7-camera button-light" ng-click="addPicture()" style="width: 68px;"></button><br/>
 		<button class="button icon ion-ios7-photos button-light" ng-click="addPicture('LIBRARY')" style="width: 68px;margin-top: 4px;"></button>
+		yolo
 	</ion-content>
 </ion-view>
