--- a/saac/www/templates/tab-photo.html
+++ b/saac/www/templates/tab-photo.html
@@ -2,6 +2,6 @@
 	<ion-content class="padding">
 		<button class="button button-full button-energized" ng-click="addPicture()" style="">Camera</button><br/>
 		<button class="button button-full button-energized" ng-click="addPicture('LIBRARY')" style="margin-top: 4px;">Library</button>
-		yolo
+		<button class="button button-full button-energized" ng-click="test()" style="margin-top: 8px;">Yolo</button>
 	</ion-content>
 </ion-view>
