--- a/saac/www/templates/tab-account.html
+++ b/saac/www/templates/tab-account.html
@@ -1,9 +1,14 @@
-<ion-view view-title="Account">
-  <ion-content>
-    <ion-list>
-    <ion-toggle  ng-model="settings.enableFriends">
-        Enable Friends
-    </ion-toggle>
-    </ion-list>
-  </ion-content>
+<ion-view view-title="Profile">
+    <ion-content class="has-header">
+        <div class="list card">
+            <div class="item">
+                <h2>{{user.name}}</h2>
+                <p>{{user.email}}</p>
+            </div>
+            <div class="item item-body">
+                <img src="https://graph.facebook.com/{{user.userId}}/picture?width=270&height=270"/>
+            </div>
+        </div>
+        <button class="button button-full button-energized" ng-click="showLogOutMenu()" style="margin-top: 8px;">Yolo</button>
+    </ion-content>
 </ion-view>
