--- a/saac/www/templates/tab-stream.html
+++ b/saac/www/templates/tab-stream.html
@@ -2,15 +2,15 @@
 	<ion-content>
     <ion-list>
     	<!-- <ion-item  ng-repeat="thing in imgs"> -->
-    		<div class="list card" ng-repeat="image in images">
+    		<div class="list card" ng-repeat="picture in pictures">
   				<div class="item item-avatar">
-    				<img src="{{user.face}}">
-    				<h2>{{user.name}}</h2>
+    				<img src="https://graph.facebook.com/{{user.userId}}/picture?width=270&height=270">
+    				<h2>{{(user.name.split(" "))[0]}}</h2>
     				<p>{{user.points}} points</p>
   				</div>
 
   				<div class="item item-image">
-    				<img src="{{urlForImage(image)}}">
+    				<img src={{picture.url}}>
   				</div>
   			</div>
     	<!-- </ion-item> -->
