adds event mock-up

--- a/saac/www/templates/start.html
+++ b/saac/www/templates/start.html
@@ -4,9 +4,9 @@
 
         <div style="margin-top: 50px;text-align: center;">
 
-            <h2 style="margin-top: 2px;">peanut butter</h2>
-            <h2>jelly</h2>
-            <h2>time</h2>
+            <h2 style="margin-top: 2px;">Tufts</h2>
+            <h2>Saac</h2>
+            <h2>App</h2>
 
             <label class="item">
                 <button class="button button-block button-positive" ng-click="facebookSignIn()">
