--- a/saac/www/templates/tab-stream.html
+++ b/saac/www/templates/tab-stream.html
@@ -7,6 +7,7 @@
   				<div class="item item-avatar">
     				<img src="https://graph.facebook.com/{{picture.userid}}/picture?width=270&height=270">
     				<h2>{{(picture.name.split(" "))[0]}}</h2>
+    				<p>{{picture.points}} points</p>
   				</div>
 
   				<div class="item item-image">
