--- a/saac/www/templates/event-detail.html
+++ b/saac/www/templates/event-detail.html
@@ -1,10 +1,14 @@
-<!--
-  This template loads for the 'tab.friend-detail' state (app.js)
-  'friend' is a $scope variable created in the FriendsCtrl controller (controllers.js)
-  The FriendsCtrl pulls data from the Friends service (service.js)
-  The Friends service returns an array of friend data
--->
-<ion-view view-title="Event">
-  <ion-content class="padding">
-  </ion-content>
+<ion-view view-title="{{event.name}}">
+<ion-content>
+  <div class="card">
+    <div class="item item-icon-left">
+      <i class="icon ion-ios-clock-outline"></i>
+      <h2>{{event.date}}</h2>
+      <p>{{event.time}}</p>
+    </div>
+    <div class="item item-divider">
+      Address: {{event.loc}}
+    </div>
+  </div>
+</ion-content>
 </ion-view>
