--- a/saac/www/templates/tab-account.html
+++ b/saac/www/templates/tab-account.html
@@ -1,5 +1,5 @@
 <ion-view view-title="Profile">
-    <ion-content class="has-header">
+    <ion-content class="padding">
         <div class="list card">
             <div class="item">
                 <h2>{{user.name}}</h2>
@@ -9,6 +9,6 @@
                 <img src="https://graph.facebook.com/{{user.userId}}/picture?width=270&height=270"/>
             </div>
         </div>
-        <button class="button button-full button-energized" ng-click="showLogOutMenu()" style="margin-top: 8px;">Yolo</button>
+        <button class="button button-full button-energized" ng-click="showLogOutMenu()" style="margin-top: 8px;">Logout</button>
     </ion-content>
 </ion-view>
