--- a/saac/www/templates/tab-events.html
+++ b/saac/www/templates/tab-events.html
@@ -1,4 +1,10 @@
 <ion-view view-title="Events">
   <ion-content>
+  	<ion-item class="item-remove-animate item-icon-right" ng-repeat="event in events" type="item-text-wrap" href="#/tab/events/{{event.id}}">
+        <h2>{{event.name}}</h2>
+        <p>{{event.date}}</p>
+        <i class="icon ion-chevron-right icon-accessory"></i>
+      </ion-item>
+    </div>
   </ion-content>
 </ion-view>
